--- a/sources/gui/ui/DisplayWindow.ui
+++ b/sources/gui/ui/DisplayWindow.ui
@@ -27,7 +27,7 @@
     <item row="2" column="0">
      <widget class="QStackedWidget" name="PageManager">
       <property name="currentIndex">
-       <number>0</number>
+       <number>2</number>
       </property>
       <widget class="QWidget" name="pageEventTitle">
        <layout class="QGridLayout" name="gridLayout_2">
@@ -245,7 +245,7 @@
            </sizepolicy>
           </property>
           <property name="frameShape">
-           <enum>QFrame::StyledPanel</enum>
+           <enum>QFrame::Box</enum>
           </property>
           <property name="frameShadow">
            <enum>QFrame::Raised</enum>
@@ -365,7 +365,6 @@
              <property name="font">
               <font>
                <pointsize>45</pointsize>
-               <kerning>false</kerning>
               </font>
              </property>
              <property name="text">
@@ -461,7 +460,7 @@
                  </sizepolicy>
                 </property>
                 <property name="frameShape">
-                 <enum>QFrame::NoFrame</enum>
+                 <enum>QFrame::Box</enum>
                 </property>
                 <property name="verticalScrollBarPolicy">
                  <enum>Qt::ScrollBarAlwaysOff</enum>
@@ -766,6 +765,9 @@
                    <property name="title">
                     <string>Heure</string>
                    </property>
+                   <property name="alignment">
+                    <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+                   </property>
                    <property name="flat">
                     <bool>true</bool>
                    </property>
@@ -792,6 +794,9 @@
                       </property>
                       <property name="text">
                        <string>15:25</string>
+                      </property>
+                      <property name="alignment">
+                       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
                       </property>
                      </widget>
                     </item>
