--- a/sources/gui/ui/MainWindow.ui
+++ b/sources/gui/ui/MainWindow.ui
@@ -14,6 +14,16 @@
   <property name="windowTitle">
    <string>Événement Loto</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="../../../resources/EvenementLoto.qrc">
+    <normaloff>:/fav/icons/mainIcon.png</normaloff>:/fav/icons/mainIcon.png</iconset>
+  </property>
+  <property name="toolButtonStyle">
+   <enum>Qt::ToolButtonTextBesideIcon</enum>
+  </property>
+  <property name="tabShape">
+   <enum>QTabWidget::Rounded</enum>
+  </property>
   <widget class="QWidget" name="EventControl">
    <layout class="QGridLayout" name="gridLayout">
     <property name="leftMargin">
@@ -713,12 +723,6 @@
      <width>888</width>
      <height>22</height>
     </rect>
-   </property>
-   <property name="defaultUp">
-    <bool>false</bool>
-   </property>
-   <property name="nativeMenuBar">
-    <bool>true</bool>
    </property>
    <widget class="QMenu" name="menuFile">
     <property name="title">
