--- a/sources/gui/ui/ConfigGeneral.ui
+++ b/sources/gui/ui/ConfigGeneral.ui
@@ -537,11 +537,14 @@
                   <property name="decimals">
                    <number>3</number>
                   </property>
+                  <property name="minimum">
+                   <double>0.010000000000000</double>
+                  </property>
                   <property name="maximum">
-                   <double>0.100000000000000</double>
+                   <double>0.050000000000000</double>
                   </property>
                   <property name="singleStep">
-                   <double>0.005000000000000</double>
+                   <double>0.001000000000000</double>
                   </property>
                   <property name="stepType">
                    <enum>QAbstractSpinBox::DefaultStepType</enum>
